--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,8 +18,19 @@ body{
 .principal {
     background-image: url("../img/Background.png");
     background-repeat: no-repeat;
+    display: grid;
+    grid-template-columns: 50%;
 }
 
 .container{
     height: 100vh;
+}
+
+.container__botao {
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
 }
