--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,6 +24,7 @@ body{
     background-repeat: no-repeat;
     display: grid;
     grid-template-columns: 50%;
+    align-items: center;
 }
 
 .container__caixa {
