--- a/styles/styles.css
+++ b/styles/styles.css
@@ -63,3 +63,23 @@ body{
 .container__imagem {
     margin: 1em 0em 2em 0;
 }
+
+.secundario__imagem{
+    width: 80%;
+}
+
+.secundario {
+    align-items: center;
+    margin: 0 10em;
+}
+
+.descricao__titulo {
+    font-weight: 700;
+    font-size: 48px;
+    color: var(--branco-principal);
+    margin-bottom: 0.1em;
+}
+
+.descricao__texto {
+    color: var(--cinza-secundario);
+}
