--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,14 +1,9 @@
-:root{
+:root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
-}
-
-*{
-    margin: 0;
-    padding: 0;
 }
 
 body{
@@ -19,20 +14,23 @@ body{
     font-weight: 400;
 }
 
+*{
+    margin: 0;
+    padding: 0;
+}
+
 .principal {
     background-image: url("../img/Background.png");
     background-repeat: no-repeat;
-    display: grid;
-    grid-template-columns: 50%;
+    background-size: contain;
     align-items: center;
-}
-
-.container__caixa {
-    margin: 0 6em;
+    text-align: center;
 }
 
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .container__botao {
@@ -47,7 +45,7 @@ body{
 
 .botao__secundario {
     background-color: transparent;
-    border:2px solid var(--branco-principal);
+    border: 2px solid var(--branco-principal);
 }
 
 .container__aviso {
@@ -61,10 +59,14 @@ body{
 }
 
 .container__imagem {
-    margin: 1em 0em 2em 0;
+    margin: 1em 0 2em 0;
 }
 
-.secundario__imagem{
+.container__caixa {
+    margin: 0 6em;
+}
+
+.secundario__imagem {
     width: 80%;
 }
 
@@ -83,3 +85,41 @@ body{
 .descricao__texto {
     color: var(--cinza-secundario);
 }
+
+.secundario__botao {
+    display: inline-block;
+    margin-top: 1em;
+}
+
+.container__descricao {
+    padding: 2em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
