--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,9 +96,26 @@ body{
 }
 
 
+.dispositivos__lista {
+    display: flex;
+    justify-content: center; /*Centralizou todo o conteudo da lista*/
+    list-style-type: none;
+    margin: 5em 0;
+}
 
+.dispositivos {
+    text-align: center;   
+}
 
+.dispositivos__titulo {
+    font-size: 48px;
+    color: var(--branco-principal);
+}
 
+.lista__item {
+    font-size: 32px;
+    color: var(--branco-principal);
+}
 
 
 
