--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
+    --botao-azul-efeito: #3c92fa;
 }
 
 body{
@@ -140,10 +141,23 @@ body{
     margin-left: 1em;
 }
 
+.lista__link a:hover {
+    color: var(--botao-azul);
+}
+
+.lista__link a:active {
+    color:purple;
+}
+
 .rodape__texto {
     margin: 1em 0;
     color: var(--cinza-secundario);
     font-size: 14px;
+}
+
+.container__botao:hover {
+    background-color: var(--botao-azul-efeito);
+    color: var(--cor-de-fundo);
 }
 
 
